AvailableAppsView functioning GET, AppsView fix